<resources>
    <string name="app_name">Lista de la compra</string>
    <string name="insertado">Insertado</string>
    <string name="tipo">Tipo</string>
    <string name="nombre">Nombre</string>
    <string name="insertar">Insertar</string>
    <string name="nada">No hay nada</string>
    <string name="campos_vacios">Campos vacios</string>
    <string name="borrado">Borrado</string>
    <string name="quieres_borrar">¿Quieres borrarlo?</string>
    <string name="nombre2">Nombre:</string>
    <string name="tipo2">Tipo:</string>
    <string name="caracteres">El nombre de usuario debe tener al menos 6 caracteres</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="introduce_la_contrase_a">Introduce la Contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="introduce_el_usuario">Introduce el usuario</string>
    <string name="usuario">Usuario</string>
    <string name="caracteres2">La contraseña debe tener más de 6 caracteres</string>
    <string name="registro">Ir a Registro</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="introduce_el_correo">Introduce el correo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fallido">Registro fallido</string>
    <string name="registrado">Registrado</string>
    <string name="error_login">Error en Login</string>
    <string name="usuario_ya_existe">El usuario ya existe</string>
    <string name="principal">Principal</string>
    <string name="cargando">Cargando, por favor espere</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="quieres_guardar_datos">¿Quieres guardar datos?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="password_invalid">The password is invalid</string>
    <string name="pass_incorrecta">Contraseña incorrecta</string>
    <string name="correo_formato">The email address is badly formatted.</string>
    <string name="formato_correo_incorrecto">Formato de correo incorrecto</string>
    <string name="salir">Salir</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="pulsa_de_nuevo_para_salir">Pulsa de nuevo para salir</string>
    <string name="usuario_no_registrado">Usuario no registrado, ve a Registro</string>
    <string name="user_no">There is no user record</string>
    <string name="registro2">Registro</string>
    <string name="bienvenido">"¡Bienvenido "</string>
    <string name="o">" o "</string>
</resources>